cleaned fibonacci code to be more efficient