@@ -17,48 +17,48 @@ public class FibonacciTest {
 
      */
 
-    public FibonacciGenerator fibonacciSequenceBuilder(int integerN) {
+    public FibonacciGenerator fibonacciSequenceBuilder() {
         FibonacciGenerator fibonacciGenerator = new FibonacciGenerator();
-        fibonacciGenerator.setIntegerN(integerN);
         return fibonacciGenerator;
     }
 
-    public int fibonacciSequenceValueAtEnd(FibonacciGenerator fibonacciSequence){
-        return fibonacciSequence.getFibonacciLinkedList().get(fibonacciSequence.getFibonacciLinkedList().size() - 1);
+    public int fibonacciSequenceValueAtEnd(int integerN){
+        FibonacciGenerator fibonacciGenerator = fibonacciSequenceBuilder();
+        return fibonacciGenerator.generateFibonacciLinkedList(integerN).getLast();
     }
 
     @Test
     public void fibonacciLengthLinkedListSizeTest(){
         Assertions.assertEquals(5,
-                fibonacciSequenceBuilder(5).getFibonacciLinkedList().size());
+                fibonacciSequenceBuilder().generateFibonacciLinkedList(5).size());
     }
 
     @Test
     public void fibonacciEquationN1Test() {
         int fibonacciSequenceN1Value = 1;
         Assertions.assertEquals(fibonacciSequenceN1Value,
-                fibonacciSequenceValueAtEnd(fibonacciSequenceBuilder(1)));
+                fibonacciSequenceValueAtEnd(1));
     }
 
     @Test
     public void fibonacciEquationN2Test() {
         int fibonacciSequenceN2Value = 1;
         Assertions.assertEquals(fibonacciSequenceN2Value,
-                fibonacciSequenceValueAtEnd(fibonacciSequenceBuilder(2)));
+                fibonacciSequenceValueAtEnd(2));
     }
 
     @Test
     public void fibonacciEquationN3Test() {
         int fibonacciSequenceN3Value = 2;
         Assertions.assertEquals(fibonacciSequenceN3Value,
-                fibonacciSequenceValueAtEnd(fibonacciSequenceBuilder(3)));
+                fibonacciSequenceValueAtEnd(3));
     }
 
     @Test
     public void fibonacciEquationN5Test() {
         int fibonacciSequenceN5Value = 5;
         Assertions.assertEquals(fibonacciSequenceN5Value,
-                fibonacciSequenceBuilder(5).getFibonacciLinkedList().get(4));
+                fibonacciSequenceValueAtEnd(5));
 
     }
 
